compiler/fir/analysis-tests/testData/resolve/diagnostics/selfTypes/forObject.kt
// FIR_DISABLE_LAZY_RESOLVE_CHECKS
import kotlin.Self
<!TYPE_PARAMETERS_IN_OBJECT!><!SELF_TYPE_INAPPLICABLE_TARGET!>@Self<!>
object CustomObject {

}<!>